--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ header h3 a {
 }
 
 header h3 a:hover {
-    padding: 0.2em;
-    color: #d8d8d8;
+    border-radius: 0.1em;
     border: 0.1em solid #d8d8d8; 
+    color: #d8d8d8;
     background: transparent;
 }
     
